# vstface

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  TODO.md
doc/: EDITORHOST.md
scripts/: scan.py  scan_all_vst3.py
src/: EditorHostRunner.hpp  EditorHostRunner.mm  ScreenshotHost.hpp  ScreenshotHost.mm  main.cpp
src/editorhost/source/: editorhost.cpp  editorhost.h  usediids.cpp
src/editorhost/source/platform/: appinit.h  iapplication.h  iplatform.h  iwindow.h
src/editorhost/source/platform/linux/: irunloopimpl.h  platform.cpp  runloop.cpp  runloop.h  window.cpp  window.h
src/editorhost/source/platform/linux/wayland/: clientcontext.cpp  clientcontext.h  platform.cpp  runloop.cpp  runloop.h  surfacedelegate.cpp  surfacedelegate.h  window.cpp  window.h
src/editorhost/source/platform/mac/: platform.mm  window.h  window.mm
src/editorhost/source/platform/win32/: platform.cpp  window.cpp  window.h
src/test_plugin/: TestPluginController.cpp  TestPluginController.hpp  TestPluginEntry.cpp  TestPluginIDs.hpp  TestPluginProcessor.cpp  TestPluginProcessor.hpp  TestPluginView.hpp  TestPluginView.mm
tests/: CMakeLists.txt
tests/integration/: cli_test.cpp
tests/unit/: screenshot_host_test.mm
